[package]
name = "s3-log-rs"
version = "0.1.0"
edition = "2021"
author = "sandip.dey1988@yahoo.com"

[dependencies]
aws-sdk-s3 = "1.64.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4"
byteorder = "1.5.0"
sha2 = "*"

[dev-dependencies]
rand = "0.8.5"
